# dora-mapper

./: .gitignore  AGENTS.md  Makefile  README.md  README_LLVM_PASSES.md  pyproject.toml  test_from_json.py
benchmarks/: test.c  test.ll  test_dfg.json
benchmarks/architectures/dice/: compiler_arch.json  mrrg.json
benchmarks/kernels/: Makefile  verify_mapping.py
benchmarks/kernels/accumulate/: graph_loop.dot
benchmarks/kernels/cap/: graph_loop.dot
benchmarks/kernels/conv2/: graph_loop.dot
benchmarks/kernels/conv3/: graph_loop.dot
benchmarks/kernels/gemm/: graph_loop.dot
benchmarks/kernels/gemv3x3_int8/: graph_loop.dot
benchmarks/kernels/jacobi_1d/: graph_loop.dot
benchmarks/kernels/jacobi_2d/: graph_loop.dot
benchmarks/kernels/laplacian/: graph_loop.dot
benchmarks/kernels/laplacian_3d/: graph_loop.dot
benchmarks/kernels/mac/: graph_loop.dot
benchmarks/kernels/mac2/: graph_loop.dot
benchmarks/kernels/matrixmultiply/: graph_loop.dot
benchmarks/kernels/mults1/: graph_loop.dot
benchmarks/kernels/mults2/: graph_loop.dot
benchmarks/kernels/nomem1/: graph_loop.dot
benchmarks/kernels/simple/: graph_loop.dot
benchmarks/kernels/simple2/: graph_loop.dot
benchmarks/kernels/sum/: graph_loop.dot
benchmarks/kernels/two_loops_1/: graph_loop.dot
benchmarks/kernels/two_loops_2/: graph_loop.dot
include/: markers.c  markers.h  qualifiers.h
llvm/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  llvm_passes.cpp
scripts/: activate  activate.sh  config.sh  install.sh
src/mapper/: cli.py
src/mapper/algorithms/: __init__.py  mapper_base.py
src/mapper/architecture/: __init__.py  compiler_arch.py  fasm_generator.py
(+43 files in other folders)
