[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mapper"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
]
dependencies = [
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
mapper = "mapper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mapper"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]
